2011-09-01  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl
	util/recon_scripts/snmpdevices.pl: Fixed entities conversions

2011-08-30  Tomas Palacios  <tomas.palacios@artica.es>

	* pandora_server/pandora_server_installer: Added missing Perl Socket6 references.

2011-08-29  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: Fixed a typo in comments for FreeBSD.

2011-08-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/DataServer.pm: Added status to supported tags.

2011-08-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NmapParser.pm: Updated package name to integrate
	  Nmap::Parser into Pandora FMS.

	* lib/PandoraFMS/ReconServer.pm: Removed recursive calls. Now parent
	  hosts are detected with a single call to nmap via Nmap::Parser.

2011-08-25  Tomas Palacios  <tomas.palacios@artica.es>

	* pandora_server/pandora_server.spec
	pandora_server/pandora_server.redhat.spec
	pandora_server/pandora_server_installer
	pandora_server/Makefile.PL
	pandora_server/DEBIAN/control: Added perl-XML-Twig, perl-SNMP
	and a missing libio-socket-inet6-perl reference.


2011-08-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NmapParser.pm: Added to repository. Patched
	  Nmap::Parser. See http://search.cpan.org/dist/Nmap-Parser/.

	* lib/PandoraFMS/ReconServer.pm: Use Nmap::Parser.

2011-08-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Exclude the datalist tag from the
	  module's extended_info.

2011-08-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Read the configuration option snmp_threads.

2011-08-22  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Update of spec to be used in Opensuse Build
	Service.

2011-08-19  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control
	pandora_server/DEBIAN/make_deb_package.sh: Updated version.


2011-08-19  Koichiro KIKUCHI  <koichiro@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed typo.
